bindings/c/whiteout_m3.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_M3ColorBGRA whiteout_M3ColorBGRA;
typedef struct whiteout_M3ColorBGR whiteout_M3ColorBGR;
typedef struct whiteout_M3Extent whiteout_M3Extent;
typedef struct whiteout_M3Event whiteout_M3Event;
typedef struct whiteout_M3Sequence whiteout_M3Sequence;
typedef struct whiteout_M3SubTrackContainer whiteout_M3SubTrackContainer;
typedef struct whiteout_M3AnimationGroup whiteout_M3AnimationGroup;
typedef struct whiteout_M3AnimationState whiteout_M3AnimationState;
/* ── M3ColorBGRA ─────────────────────────────────────────────── */

/* Color stored as BGRA (4 bytes) */
/*  */
/* Blue-green-red-alpha byte order, matching the M3 on-disk format. */
whiteout_M3ColorBGRA* whiteout_m3_M3ColorBGRA_new(void);
void whiteout_m3_M3ColorBGRA_delete(whiteout_M3ColorBGRA* self);
/* Blue channel */
uint8_t whiteout_m3_M3ColorBGRA_get_b(const whiteout_M3ColorBGRA* self);
void whiteout_m3_M3ColorBGRA_set_b(whiteout_M3ColorBGRA* self, uint8_t value);
/* Green channel */
uint8_t whiteout_m3_M3ColorBGRA_get_g(const whiteout_M3ColorBGRA* self);
void whiteout_m3_M3ColorBGRA_set_g(whiteout_M3ColorBGRA* self, uint8_t value);
/* Red channel */
uint8_t whiteout_m3_M3ColorBGRA_get_r(const whiteout_M3ColorBGRA* self);
void whiteout_m3_M3ColorBGRA_set_r(whiteout_M3ColorBGRA* self, uint8_t value);
/* Alpha channel */
uint8_t whiteout_m3_M3ColorBGRA_get_a(const whiteout_M3ColorBGRA* self);
void whiteout_m3_M3ColorBGRA_set_a(whiteout_M3ColorBGRA* self, uint8_t value);
/* ── M3ColorBGR ─────────────────────────────────────────────── */

whiteout_M3ColorBGR* whiteout_m3_M3ColorBGR_new(void);
void whiteout_m3_M3ColorBGR_delete(whiteout_M3ColorBGR* self);
/* Blue channel */
uint8_t whiteout_m3_M3ColorBGR_get_b(const whiteout_M3ColorBGR* self);
void whiteout_m3_M3ColorBGR_set_b(whiteout_M3ColorBGR* self, uint8_t value);
/* Green channel */
uint8_t whiteout_m3_M3ColorBGR_get_g(const whiteout_M3ColorBGR* self);
void whiteout_m3_M3ColorBGR_set_g(whiteout_M3ColorBGR* self, uint8_t value);
/* Red channel */
uint8_t whiteout_m3_M3ColorBGR_get_r(const whiteout_M3ColorBGR* self);
void whiteout_m3_M3ColorBGR_set_r(whiteout_M3ColorBGR* self, uint8_t value);
/* ── M3Extent ─────────────────────────────────────────────── */

/* Axis-aligned bounding box with bounding sphere radius (28 bytes) */
/*  */
/* Used throughout M3 for model bounds, collision bounds, and per-region extents. */
whiteout_M3Extent* whiteout_m3_M3Extent_new(void);
void whiteout_m3_M3Extent_delete(whiteout_M3Extent* self);
/* AABB minimum corner */
whiteout_Vector3f* whiteout_m3_M3Extent_get_min(whiteout_M3Extent* self);
void whiteout_m3_M3Extent_set_min(whiteout_M3Extent* self, const whiteout_Vector3f* value);
/* AABB maximum corner */
whiteout_Vector3f* whiteout_m3_M3Extent_get_max(whiteout_M3Extent* self);
void whiteout_m3_M3Extent_set_max(whiteout_M3Extent* self, const whiteout_Vector3f* value);
/* Bounding sphere radius */
float whiteout_m3_M3Extent_get_radius(const whiteout_M3Extent* self);
void whiteout_m3_M3Extent_set_radius(whiteout_M3Extent* self, float value);
/* ── M3Event ─────────────────────────────────────────────── */

/* EVNT — Animation event (v0–v2, 104–108 bytes) */
/*  */
/* Named event triggered at a specific bone with an optional type code and parameter string. Used for sound cues, spawn effects, etc. */
whiteout_M3Event* whiteout_m3_M3Event_new(void);
void whiteout_m3_M3Event_delete(whiteout_M3Event* self);
/* Event name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3Event_get_name(const whiteout_M3Event* self);
void whiteout_m3_M3Event_set_name(whiteout_M3Event* self, const char* value);
/* Unknown field */
uint32_t whiteout_m3_M3Event_get_unknown(const whiteout_M3Event* self);
void whiteout_m3_M3Event_set_unknown(whiteout_M3Event* self, uint32_t value);
/* Index into BONE array */
uint16_t whiteout_m3_M3Event_get_boneIndex(const whiteout_M3Event* self);
void whiteout_m3_M3Event_set_boneIndex(whiteout_M3Event* self, uint16_t value);
/* Alignment padding */
uint16_t whiteout_m3_M3Event_get_padding(const whiteout_M3Event* self);
void whiteout_m3_M3Event_set_padding(whiteout_M3Event* self, uint16_t value);
/* Engine-specific event type code */
uint32_t whiteout_m3_M3Event_get_eventType(const whiteout_M3Event* self);
void whiteout_m3_M3Event_set_eventType(whiteout_M3Event* self, uint32_t value);
/* Optional parameter string (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3Event_get_optionString(const whiteout_M3Event* self);
void whiteout_m3_M3Event_set_optionString(whiteout_M3Event* self, const char* value);
/* RTT channel index */
uint32_t whiteout_m3_M3Event_get_rttChannelIndex(const whiteout_M3Event* self);
void whiteout_m3_M3Event_set_rttChannelIndex(whiteout_M3Event* self, uint32_t value);
/* Extra parameter (v2+) */
uint32_t whiteout_m3_M3Event_get_extraParameter(const whiteout_M3Event* self);
void whiteout_m3_M3Event_set_extraParameter(whiteout_M3Event* self, uint32_t value);
/* ── M3Sequence ─────────────────────────────────────────────── */

/* SEQS — Animation sequence (v0–v2, up to 92 bytes) */
/*  */
/* Defines a named animation clip with frame range, playback speed, looping flags, blend time, and bounding volume. */
whiteout_M3Sequence* whiteout_m3_M3Sequence_new(void);
void whiteout_m3_M3Sequence_delete(whiteout_M3Sequence* self);
/* Unique sequence identifier */
int32_t whiteout_m3_M3Sequence_get_id(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_id(whiteout_M3Sequence* self, int32_t value);
/* Sequence index */
int32_t whiteout_m3_M3Sequence_get_index(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_index(whiteout_M3Sequence* self, int32_t value);
/* Sequence name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3Sequence_get_name(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_name(whiteout_M3Sequence* self, const char* value);
/* First frame (inclusive) */
uint32_t whiteout_m3_M3Sequence_get_startFrame(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_startFrame(whiteout_M3Sequence* self, uint32_t value);
/* Last frame (inclusive) */
uint32_t whiteout_m3_M3Sequence_get_endFrame(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_endFrame(whiteout_M3Sequence* self, uint32_t value);
/* Movement speed multiplier */
float whiteout_m3_M3Sequence_get_moveSpeed(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_moveSpeed(whiteout_M3Sequence* self, float value);
/* Playback flags (loop, global, etc.) */
int32_t whiteout_m3_M3Sequence_get_flags(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_flags(whiteout_M3Sequence* self, int32_t value);
/* Selection frequency / priority weight */
uint32_t whiteout_m3_M3Sequence_get_frequency(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_frequency(whiteout_M3Sequence* self, uint32_t value);
/* Replay region start frame */
uint32_t whiteout_m3_M3Sequence_get_replayStart(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_replayStart(whiteout_M3Sequence* self, uint32_t value);
/* Replay region end frame */
uint32_t whiteout_m3_M3Sequence_get_replayEnd(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_replayEnd(whiteout_M3Sequence* self, uint32_t value);
/* Blend-in time (ms) */
uint32_t whiteout_m3_M3Sequence_get_blendTime(const whiteout_M3Sequence* self);
void whiteout_m3_M3Sequence_set_blendTime(whiteout_M3Sequence* self, uint32_t value);
/* ── M3SubTrackContainer ─────────────────────────────────────────────── */

/* STC_ — Sub-track container (v0–v4, 204 bytes) */
/*  */
/* Binds animation IDs to concrete keyframe data stored in 13 typed AnimBlock arrays (slots 0–12). Each slot handles a different value type: events, vectors, quaternions, colors, scalars, flags, and bounding extents. */
whiteout_M3SubTrackContainer* whiteout_m3_M3SubTrackContainer_new(void);
void whiteout_m3_M3SubTrackContainer_delete(whiteout_M3SubTrackContainer* self);
/* Container name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3SubTrackContainer_get_name(const whiteout_M3SubTrackContainer* self);
void whiteout_m3_M3SubTrackContainer_set_name(whiteout_M3SubTrackContainer* self, const char* value);
/* Non-zero if runs concurrently */
uint16_t whiteout_m3_M3SubTrackContainer_get_runsConcurrent(const whiteout_M3SubTrackContainer* self);
void whiteout_m3_M3SubTrackContainer_set_runsConcurrent(whiteout_M3SubTrackContainer* self, uint16_t value);
/* Animation priority level */
uint16_t whiteout_m3_M3SubTrackContainer_get_animPriority(const whiteout_M3SubTrackContainer* self);
void whiteout_m3_M3SubTrackContainer_set_animPriority(whiteout_M3SubTrackContainer* self, uint16_t value);
/* Parent STS_ index */
uint16_t whiteout_m3_M3SubTrackContainer_get_animationStateIndex(const whiteout_M3SubTrackContainer* self);
void whiteout_m3_M3SubTrackContainer_set_animationStateIndex(whiteout_M3SubTrackContainer* self, uint16_t value);
/* Alignment padding */
uint16_t whiteout_m3_M3SubTrackContainer_get_padding(const whiteout_M3SubTrackContainer* self);
void whiteout_m3_M3SubTrackContainer_set_padding(whiteout_M3SubTrackContainer* self, uint16_t value);
/* Unknown field */
uint32_t whiteout_m3_M3SubTrackContainer_get_unknown(const whiteout_M3SubTrackContainer* self);
void whiteout_m3_M3SubTrackContainer_set_unknown(whiteout_M3SubTrackContainer* self, uint32_t value);
/* ── M3AnimationGroup ─────────────────────────────────────────────── */

/* STG_ — Animation group (v0, 24 bytes) */
/*  */
/* Groups sub-track containers by name for organizational purposes. */
whiteout_M3AnimationGroup* whiteout_m3_M3AnimationGroup_new(void);
void whiteout_m3_M3AnimationGroup_delete(whiteout_M3AnimationGroup* self);
/* Group name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3AnimationGroup_get_name(const whiteout_M3AnimationGroup* self);
void whiteout_m3_M3AnimationGroup_set_name(whiteout_M3AnimationGroup* self, const char* value);
/* ── M3AnimationState ─────────────────────────────────────────────── */

/* STS_ — Animation state (v0, 28 bytes) */
/*  */
/* Top-level animation state containing a set of animation IDs and 16 bytes of unknown state data. */
whiteout_M3AnimationState* whiteout_m3_M3AnimationState_new(void);
void whiteout_m3_M3AnimationState_delete(whiteout_M3AnimationState* self);